--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -12,6 +12,10 @@
     transition: 0.5s;
   }
 
+  .mensagensFiltradas {
+    background-color: #f1f1f1;
+  }
+
   .cabecalhoChat {
     width: 100%;
     height: 5rem;
@@ -22,7 +26,17 @@
 
   #searchIcon {
     margin-top: 2rem;
-    margin-left: 73%;
+    margin-left: 50%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  #searchIcon div {
+    flex: 1;
+  }
+  
+  #searchIcon input {
+    flex: 1;
   }
 
   .searchInput {
