--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -1,7 +1,3 @@
-  .chat-principal {
-    margin-left: 136px;
-  }
-
   .dados {
     margin-left: 1rem;
     margin-top: 2rem;
@@ -77,7 +73,6 @@
     position: fixed;
     overflow: auto;
     width: 84%;
-    height: 40.7rem;
     padding: 0.3rem;
     justify-content: space-between;
   }
@@ -113,7 +108,6 @@
   #corFundo {
     background-image: url(https://www.papeiseparede.com.br/3257-thickbox_default/papel-de-parede-whatsapp-branco-e-azul.jpg.webp);
     justify-content: center;
-    height: 46.5rem;
   }
 
   .textoChat1 {
@@ -223,7 +217,7 @@
     background-color: #075889;
   }
 
-  @media screen and (max-height: 834px) {
+  /* @media screen and (max-height: 834px) {
     #corFundo {
       height: 42rem;
     }
@@ -329,4 +323,4 @@
     #searchIcon {
       margin-left: 20%;
     }
-  }
+  } */
