--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -1,223 +1,237 @@
-  .dados {
-    margin-left: 1rem;
-    margin-top: 2rem;
-    border-end-start-radius: 15px;
-    border-end-end-radius: 15px;
-    cursor: pointer;
-    font-size: 20px;
-    transition: 0.5s;
-  }
+.containerChatPrincipal {
+  height: 100vh;
+}
 
-  .mensagensFiltradas {
-    padding: 5px;
-    background-color: #f1f1f1;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
+.dados {
+  margin-left: 1rem;
+  margin-top: 2rem;
+  border-end-start-radius: 15px;
+  border-end-end-radius: 15px;
+  cursor: pointer;
+  font-size: 20px;
+  transition: 0.5s;
+}
 
-  .cabecalhoChat {
-    width: 100%;
-    height: 5rem;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    color: black;
-  }
+.mensagensFiltradas {
+  padding: 5px;
+  background-color: #f1f1f1;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
 
-  #searchIcon {
-    margin-top: 2rem;
-    margin-left: 45%;
-    align-items: center;
-    justify-content: center;
-  }
+.cabecalhoChat {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  border-bottom: rgb(184, 181, 181) solid 0.1px; /* Ajuste o valor da margem inferior conforme necessário */
+}
 
-  .searchInput {
-    padding: 5px;
-    outline: none;
-    font-size: 14px;
-    background-color: #f2f2f2;
-    border-radius: 8px;
-    width: 200px;
-  }
-  
-  .searchInput:focus {
-    background-color: #ffffff;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  }
+#searchIcon {
+  margin-top: 2rem;
+  margin-left: 70%;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
 
-  .searchInput {
-    background-color: transparent;
-  }
-  
-  .highlight {
-    border-radius: 3px;
-    background-color: yellow;
-    color: black;
-  }
+.searchInput {
+  margin-left: -5rem;
+  padding: 5px;
+  outline: none;
+  font-size: 14px;
+  background-color: #f2f2f2;
+  border-radius: 8px;
+  width: 200px;
+  border: 1.2px solid #ccc; /* Adicione a propriedade border para definir o estilo da borda */
+}
 
-  #imagemPerfilChat {
-    margin-top: 1.2rem;
-    margin-left: 1.2rem;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    border: #000000 0.5px solid;
-  }
+.searchInput:focus {
+  background-color: #ffffff;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
 
-  .digitando {
-    color: #201F25;
-    margin-top: 3px;
-    font-size: 15px;
-  }
+.searchInput {
+  background-color: transparent;
+}
 
-  .conteudoChat {
-    position: fixed;
-    overflow: auto;
-    width: 84%;
-    padding: 0.3rem;
-    justify-content: space-between;
-  }
+.highlight {
+  border-radius: 3px;
+  background-color: yellow;
+  color: black;
+}
 
-  .conteudoChat::-webkit-scrollbar {
-    width: 6px;
-    background-color: transparent;
-    /* Largura da barra de rolagem */
-  }
+#imagemPerfilChat {
+  margin-top: 1.2rem;
+  margin-left: 1.2rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border: #000000 0.5px solid;
+}
 
-  .conteudoChat::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-    /* Cor de fundo da pista da barra de rolagem */
-  }
+.digitando {
+  color: #201F25;
+  margin-top: 3px;
+  font-size: 15px;
+}
 
-  .conteudoChat::-webkit-scrollbar-thumb {
-    background-color: #888;
-    /* Cor do polegar da barra de rolagem */
-    border-radius: 4px;
-    /* Raio de borda do polegar */
-  }
+.conteudoChat {
+  position: fixed;
+  overflow: auto;
+  width: calc(100% - 350px);
+  height: calc(100% - 14rem);
+  padding: 0.3rem;
+  justify-content: space-between;
+}
+.conteudoChat::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+  /* Largura da barra de rolagem */
+}
 
-  .conteudoChat::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-    /* Cor do polegar da barra de rolagem quando o mouse passa por cima */
-  }
+.conteudoChat::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Cor de fundo da pista da barra de rolagem */
+}
 
-  .conteudoChat::-webkit-scrollbar-thumb:active {
-    background-color: #333;
-    /* Cor do polegar da barra de rolagem quando está sendo pressionado */
-  }
+.conteudoChat::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Cor do polegar da barra de rolagem */
+  border-radius: 4px;
+  /* Raio de borda do polegar */
+}
 
-  #corFundo {
-    background-image: url(https://www.papeiseparede.com.br/3257-thickbox_default/papel-de-parede-whatsapp-branco-e-azul.jpg.webp);
-    justify-content: center;
-  }
+.conteudoChat::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  /* Cor do polegar da barra de rolagem quando o mouse passa por cima */
+}
 
-  .textoChat1 {
-    margin-top: 10px;
-    max-width: 50%;
-    min-width: 3%;
-    float: right;
-    /* Alinha a fala à esquerda */
-    margin-right: 1%;
-    margin-left: 90%;
-    height: auto;
-    padding: 13px;
-    color: #ffffff;
-    background: linear-gradient(to right, #363795, #005C97);
-    border-end-start-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
+.conteudoChat::-webkit-scrollbar-thumb:active {
+  background-color: #333;
+  /* Cor do polegar da barra de rolagem quando está sendo pressionado */
+}
 
-  .textoChat1 span {
-    margin-left: 10px;
-  }
+#corFundo {
+  /* background-image: url(https://www.papeiseparede.com.br/3257-thickbox_default/papel-de-parede-whatsapp-branco-e-azul.jpg.webp); */
+  justify-content: center;
+  z-index: -1;
+  height: calc(100% - 4rem); /* Ajuste a altura conforme necessário */
+}
 
-  .textoChatOutro span {
-    margin-left: 10px;
-  }
+.textoChat1 {
+  margin-top: 10px;
+  max-width: 50%;
+  min-width: 3%;
+  float: right;
+  /* Alinha a fala à esquerda */
+  margin-right: 1%;
+  margin-left: 90%;
+  height: auto;
+  padding: 13px;
+  color: #7E808C;
+  /* background: linear-gradient(to right, #363795, #005C97); */
+  background-color: #EDEFFC;
+  border-end-start-radius: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
 
-  .horario {
-    float: right;
-    margin-top: 12px;
+.textoChat1 span {
+  margin-left: 10px;
+}
 
-    font-size: 12px;
-  }
+.textoChatOutro span {
+  margin-left: 10px;
+}
 
-  .textoChatOutro {
-    margin-top: 10px;
-    float: left;
-    /* Alinha a fala à esquerda */
-    max-width: 50%;
-    margin-right: 90%;
-    margin-left: 1%;
-    gap: 10px;
-    width: auto;
-    height: auto;
-    padding: 13px;
-    color: #ffffff;
-    background: linear-gradient(to left, rgb(101, 154, 204), rgb(68, 131, 182));
-    border-end-end-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
+.horario {
+  float: right;
+  margin-top: 12px;
 
-  .entradasChat {
-    border-top: #201F25 solid 1px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-  }
+  font-size: 12px;
+}
 
-  .formEntradas {
-    position: relative;
-    /* Deve ter uma posição definida para o z-index funcionar */
-    z-index: 9999;
-  }
+.textoChatOutro {
+  margin-top: 10px;
+  float: left;
+  /* Alinha a fala à esquerda */
+  max-width: 50%;
+  margin-right: 90%;
+  margin-left: 1%;
+  gap: 10px;
+  width: auto;
+  height: auto;
+  padding: 13px;
+  color: #7E808C;
+/* background: linear-gradient(to left, rgb(101, 154, 204), rgb(68, 131, 182));   */
+background-color: #EDEFFC;
+  border-end-end-radius: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
 
-  #campoDigitacao {
-    font-size: 13px;
-    background-color: #ffffff;
-    width: 50%;
-    height: 27px;
-    padding: 0.5rem;
-    color: black;
-    border-color: #201F25;
-    border-style: solid;
-    border-end-start-radius: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 20px;
-  }
+.entradasChat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
 
-  .scrollbar-container {
-    width: 100%;
-    overflow-x: auto;
-  }
+.formEntradas {
+  margin-top: 46%; 
+  position: relative;
+  /* Deve ter uma posição definida para o z-index funcionar */
+  z-index: 9999;
+}
 
-  .scrollbar-content {
-    white-space: nowrap;
-    display: flex;
-    /* Adicione estilos adicionais conforme necessário para personalizar a aparência */
-  }
+#campoDigitacao {
+  font-size: 13px;
+  background-color: #EDF0F7;
+  width: 50%;
+  height: 27px;
+  padding: 0.2rem;
+  color: #8B9096;
+  border: none;
+  border-radius: 15px;
+  padding-left: 25px; /* Ajuste o valor da margem à esquerda conforme necessário */
+}
 
-  .sendMessage {
-    align-items: center;
-    justify-content: center;
-    margin-left: 8px;
-    font-size: 13px;
-    background-color: #ffffff;
-    padding: 5px;
-    color: black;
-    border: black solid 2px;
-    border-radius: 50%;
-    transition: 0.5s;
-  }
 
-  .sendMessage:hover {
-    color: #ffffff;
-    background-color: #075889;
-  }
+.scrollbar-container {
+  width: 100%;
+  overflow-x: auto;
+}
 
-  /* @media screen and (max-height: 834px) {
+.scrollbar-content {
+  white-space: nowrap;
+  display: flex;
+  /* Adicione estilos adicionais conforme necessário para personalizar a aparência */
+}
+
+.sendMessage {
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
+  font-size: 13px;
+  background-color: #4B62E2;
+  padding: 10px;
+  color: #EDEFFC;
+  border: none;
+  border-radius: 30px;
+  transition: 0.5s;
+  display: flex;
+  gap: 5px; /* Certifique-se de adicionar a propriedade display:flex */
+}
+
+
+.sendMessage:hover {
+  color: #ffffff;
+  background-color: #075889;
+}
+
+/* @media screen and (max-height: 834px) {
     #corFundo {
       height: 42rem;
     }
