--- a/front-end/src/pages/Chat/SidebarChat/style.css
+++ b/front-end/src/pages/Chat/SidebarChat/style.css
@@ -5,18 +5,21 @@
   align-items: center;
   padding: 0.8rem;
 }
-.index{
+
+.index {
+  transition: 0.5s;
   margin-left: 1rem;
   width: 310px;
 }
 
 
-.index:hover{
-  background-color: #fff;
-  border-radius: 4px;
+.index:hover {
+  box-shadow: 0px 5px 10px rgba(162, 161, 161, 0.5);
+  background-color: #F3F2F7;
+  border-radius: 8px;
 }
 
-.iconeSala{
+.iconeSala {
   margin-left: 1rem;
   margin-right: 1rem;
 }
@@ -33,7 +36,7 @@
   align-items: center;
   justify-content: center;
   margin-left: 2.2rem;
-  
+
 }
 
 #imagemPerfilChatS {
@@ -45,7 +48,7 @@
 }
 
 
-.sidebarDate{
+.sidebarDate {
   height: 50px;
   font-size: 17px;
   display: flex;
@@ -55,33 +58,44 @@
   width: 96%;
 }
 
-.densityMediumIcon:hover{
-  cursor: pointer;
-}
-.deleteForeverIcon:hover{
+.densityMediumIcon:hover {
   cursor: pointer;
 }
 
-.deleteForeverIcon{
+.deleteForeverIcon:hover {
+  cursor: pointer;
+}
+
+.deleteForeverIcon {
+  transition: 0.5s;
   display: flex;
-  background-color: #2476aa;
-  margin-left: 150px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-left: 230px;
   margin-bottom: 0.4px;
   padding: 2px;
   align-items: center;
-  justify-content:start ;
+  justify-content: start;
 }
 
+.deleteForeverIcon:hover{
+  background-color: #ED4956;
+}
 
-.headerSidebar{
+.headerSidebar {
+  margin-top: 5px;
   display: flex;
   border: solid black 1px;
+  border-radius: 5px;
+  padding: 5px;
+  width: 310px;
+  margin-left: 10px;
 }
 
-.headerSidebar div{
+.headerSidebar div {
   flex: 1;
 }
 
-.headerSidebar div:hover{
+.headerSidebar div:hover {
   cursor: pointer;
 }
