--- a/front-end/src/pages/Chat/style.css
+++ b/front-end/src/pages/Chat/style.css
@@ -1,9 +1,7 @@
 .containerChat {
   padding: 0;
-  margin-top: 80px;
   display: flex;
-  width: 100%;
-  height: 100vh;
+  height: calc(100% - 5rem); 
 }
 
 .sidebar-Chat {
@@ -11,14 +9,14 @@
   overflow: auto;
   background-color: #F3F2F7;
   width: 350px;
-  position: fixed;
   top: 83px;
-  height: 90vh;
+  height: calc(100vh - 83px); /* Ajuste a altura conforme necessário */
 }
 
 .chat-principal {
+  position: fixed;
+  width: calc(100vw - 350px);
   margin-left: 350px;
-  width: auto;
 }
 
 .sidebar-Chat::-webkit-scrollbar {
