--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -127,7 +127,7 @@
   float: right;
   /* Alinha a fala à esquerda */
   margin-right: 1%;
-  margin-left: 90%;
+  margin-left: 85%;
   height: auto;
   padding: 13px;
   color: #7E808C;
@@ -136,6 +136,8 @@
   border-end-start-radius: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+
+  word-wrap: break-word; /* Quebra o texto em várias linhas */
 }
 
 .textoChat1 span {
@@ -158,7 +160,7 @@
   float: left;
   /* Alinha a fala à esquerda */
   max-width: 50%;
-  margin-right: 90%;
+  margin-right: 85%;
   margin-left: 1%;
   gap: 10px;
   width: auto;
@@ -170,6 +172,8 @@ background-color: #EDEFFC;
   border-end-end-radius: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+
+  word-wrap: break-word; /* Quebra o texto em várias linhas */
 }
 
 .entradasChat {
