--- a/front-end/src/pages/SalasPublico/style.css
+++ b/front-end/src/pages/SalasPublico/style.css
@@ -1,42 +1,30 @@
-.sidebarItem {
-  justify-content: center;
-  color: #ffffff;
-  padding: 20px;
-  border: #000000 solid 2px;
-  background-color: #2476aa;
-  border-radius: 20px;
-  margin-top: 0.5rem;
-  font-size: 17px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 20px;
-  gap: 8px;
-  border-radius: 20px;
+.containerSalasPublico {
+  margin-top: 5.1rem;
+  position: fixed;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
-.containerSalasPublico {
-  position: fixed;
+.containerSidebarSalasPublico{
+  background-color: transparent;
   width: 100%;
-  height: auto;
+
 }
 
 .criarSalaBotao {
-  justify-content: center;
-  color: #ffffff;
-  padding: 20px;
-  height: 20px;
-  border: #000000 solid 2px;
-  background-color: #2476aa;
-  border-radius: 20px;
-  margin-top: 0.5rem;
-  font-size: 17px;
-  display: flex;
+  margin-top: 1rem;
+  margin-left: 70%;
   align-items: center;
+  justify-content: center;
+  display: flex;
+  padding: 6px;
+  width: 8rem;
+  background-color: #2476aa;
+  color: rgb(250, 250, 250);
+  border: #000000 solid 2px;
   gap: 10px;
-  flex-direction: row;
-  padding: 0.6rem;
-  border-radius: 20px;
+  border-radius: 15px;
   cursor: pointer;
 }
 
@@ -45,9 +33,10 @@
   color: #0f4a6d;
 }
 
-.sidebarItem:hover {
-  transition: 0.5s;
-  color: #0f4a6d;
+.chatPrincipalSalaspublico{
+  margin-top: 0rem;
+  width: 100%;
+  height: calc(100vh - 2rem);
 }
 
 @media screen and (max-width: 700px) {
