--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -63,23 +63,6 @@
   border: 1.2px solid #ccc;
 }
 
-.mensagensFiltradas {
-  width: 400px;
-  position: absolute; /* Posicionando como absoluto para que a div não ocupe espaço no fluxo do layout */
-  top: 2.5rem; /* Ajuste a distância do topo conforme necessário */
-  right: 0rem; /* Ajuste a distância da direita conforme necessário */
-  border: solid 2px blue;
-  background-color: #f1f1f1;
-  border-radius: 8px;
-  padding: 5px;
-  z-index: 9999; /* Definindo um z-index alto para garantir que fique acima dos outros elementos */
-}
-/* 
-.test {
-  border: solid 2px blue;
-} */
-
-
 .searchInput:focus {
   background-color: #ffffff;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
@@ -94,6 +77,35 @@
   background-color: yellow;
   color: black;
 }
+
+.mensagensFiltradas {
+  width: 400px;
+  position: absolute; /* Posicionando como absoluto para que a div não ocupe espaço no fluxo do layout */
+  top: 2.5rem; /* Ajuste a distância do topo conforme necessário */
+  right: 0rem; /* Ajuste a distância da direita conforme necessário */
+  border: solid 2px blue;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 5px;
+  z-index: 9999; /* Definindo um z-index alto para garantir que fique acima dos outros elementos */
+}
+
+.mensageUni {
+  max-width: 100%;
+  padding: 5px;
+  padding-bottom: 10px;
+  border-bottom: solid 1px rgba(104, 104, 104, 0.219);
+  border-radius: 5px;
+  transition: border-color 0.3s ease; /* Adicionando a transição de cor */
+  margin-bottom: 10px;
+
+  word-wrap: break-word;
+}
+
+.mensageUni:hover {
+  background-color: #EDEFFC;
+}
+
 
 #imagemPerfilChat {
   margin-top: 1.2rem;
