--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -91,6 +91,10 @@
   z-index: 9999; /* Definindo um z-index alto para garantir que fique acima dos outros elementos */
 }
 
+.mensagensFiltradas:target {
+  display: none;
+}
+
 .mensageUni {
   max-width: 100%;
   padding: 5px;
@@ -106,6 +110,8 @@
 .mensageUni:hover {
   background-color: #EDEFFC;
 }
+
+
 
 
 #imagemPerfilChat {
