--- a/front-end/src/pages/Chat/ChatPrincipal/style.css
+++ b/front-end/src/pages/Chat/ChatPrincipal/style.css
@@ -19,7 +19,7 @@
   display: flex;
   background-color: rgb(255, 255, 255);
   color: black;
-  border-bottom: rgb(184, 181, 181) solid 0.1px; /* Ajuste o valor da margem inferior conforme necessário */
+  border-bottom: rgb(184, 181, 181) solid 0.1px;
 }
 
 .mensagensFiltradas {
@@ -41,17 +41,17 @@
 
 .searchContainer {
   width: 400px;
-  position: fixed; /* Alterando para posição fixa */
-  top: 13%; /* Posicionando no meio vertical da tela */
+  position: fixed; 
+  top: 13%; 
   right: 1rem; /* Posicionando a 1rem da borda direita da tela */
   transform: translateY(-50%); /* Centralizando verticalmente */
   display: flex;
   border: solid 2px rgba(123, 123, 124, 0.24);
   border-radius: 8px;
   align-items: center;
-  background-color: #ffffff; /* Adicionando uma cor de fundo */
-  padding: 5px; /* Adicionando um pouco de espaço interno para o conteúdo */
-  z-index: 9999; /* Definindo um z-index alto para garantir que ele fique acima dos outros elementos */
+  background-color: #ffffff; 
+  padding: 5px; 
+  z-index: 9999; 
 }
 
 .searchInput {
@@ -82,13 +82,13 @@
 .mensagensFiltradas {
   width: 400px;
   position: absolute; /* Posicionando como absoluto para que a div não ocupe espaço no fluxo do layout */
-  top: 2.5rem; /* Ajuste a distância do topo conforme necessário */
-  right: 0rem; /* Ajuste a distância da direita conforme necessário */
+  top: 2.5rem; 
+  right: 0rem; 
   border: solid 2px rgba(123, 123, 124, 0.24);
   background-color: #ffffff;
   border-radius: 8px;
   padding: 5px;
-  z-index: 9999; /* Definindo um z-index alto para garantir que fique acima dos outros elementos */
+  z-index: 9999; 
 }
 
 .mensagensFiltradas:target {
@@ -101,7 +101,7 @@
   padding-bottom: 10px;
   border-bottom: solid 1px rgba(104, 104, 104, 0.219);
   border-radius: 5px;
-  transition: border-color 0.3s ease; /* Adicionando a transição de cor */
+  transition: border-color 0.3s ease; 
   margin-bottom: 10px;
 
   word-wrap: break-word;
@@ -177,19 +177,17 @@
   max-width: 50%;
   min-width: 3%;
   float: right;
-  /* Alinha a fala à esquerda */
   margin-right: 1%;
   margin-left: 85%;
   height: auto;
   padding: 13px;
   color: #7E808C;
-  /* background: linear-gradient(to right, #363795, #005C97); */
   background-color: #EDEFFC;
   border-end-start-radius: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 
-  word-wrap: break-word; /* Quebra o texto em várias linhas */
+  word-wrap: break-word; 
 }
 
 .textoChat1 span {
@@ -210,7 +208,6 @@
 .textoChatOutro {
   margin-top: 10px;
   float: left;
-  /* Alinha a fala à esquerda */
   max-width: 50%;
   margin-right: 85%;
   margin-left: 1%;
@@ -219,13 +216,11 @@
   height: auto;
   padding: 13px;
   color: #7E808C;
-/* background: linear-gradient(to left, rgb(101, 154, 204), rgb(68, 131, 182));   */
-background-color: #EDEFFC;
+  background-color: #EDEFFC;
   border-end-end-radius: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-
-  word-wrap: break-word; /* Quebra o texto em várias linhas */
+  word-wrap: break-word; 
 }
 
 .entradasChat {
