--- a/front-end/src/pages/Forum/FormularioPergunta/style.css
+++ b/front-end/src/pages/Forum/FormularioPergunta/style.css
@@ -35,6 +35,7 @@ textarea,
 }
 
 .botao-geral {
+  display: flex;
   padding: 6px;
   width: 20%;
   background-color: #0f5986;
@@ -43,6 +44,8 @@ textarea,
   border-radius: 15px;
   cursor: pointer;
 }
+
+
 
 .botao-cancelar {
   background-color: #747576;
